<resources>
    <string name="app_name">FindGarage1.0</string>
    <string name="main_btn_goto_login">Login</string>
    <string name="main_btn_goto_signup">Sign Up</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_btn_login">Login</string>

    <string-array name="user_type">
        <item>User</item>
        <item>Garage</item>
    </string-array>
    <string name="user_type_prompt">Choose your type</string>
    <string name="tv_nearest_garage_you_are_here">You are Here</string>
    <string name="nearest_garage_btn_goto">Go to Page</string>
    <string name="details_garage_lable_name">Welcome</string>
    <string name="details_garage_btn_send_devis">Send</string>
    <string name="form_devis_hint_description">Description</string>
    <string name="app_name_label">Find the nearest garage</string>
    <string name="MAP_KEY">AIzaSyDebrd5gGefoXOy76mQVB4dlqTdxm4V6aE</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_go_to_sign_up">Need to sign Up?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_fragment_tag">map_fragment_tag</string>
    <string name="btn_back_home">Back Home</string>
    <string name="details_garage_btn_back_home">Cancel</string>
    <string name="btn_go_to_my_devis">show my devis</string>
    <string name="ListMyDevisLabel">List of pending offer(s)</string>
    <string name="label_details_garage">Garage\'s details</string>
    <string name="label_tel_garage">Garage\'s Telephone</string>
    <string name="btn_show_confirmed_offer">Confirmed Offer</string>
    <string name="ListMyConfirmedOfferLabel">Confirmed Offer(s)</string>
    <string name="btn_user_show_confirmed">Show confirmed</string>
    <string name="offer_num_client">Client :</string>
    <string name="offer_description">Description</string>
    <string name="offer_date">Received date</string>
    <string name="label_change_offer_status">Update status?</string>
    <string name="btn_update_offer_status">Update Status</string>
    <string name="register_firstName_user">First Name</string>
    <string name="register_lastName_user">Last Name</string>
    <string name="register_email_user">Email</string>
    <string name="register_tel_user">Tel</string>
    <string name="register_adresse_user">Adress</string>
    <string name="btn_register_save">Save</string>
    <string name="User">User</string>
    <string name="Garage">Garage</string>
    <string name="register_name_garage">Name</string>
    <string name="register_domaine_garage">Domaine</string>
    <string name="register_adresse_format">Rue simonis 25, 1000 Bruxelles</string>
    <string name="register_tel_format">0483217654</string>
    <string name="register_email_format">email@domain.com</string>
    <string name="register_name_example">Garage Vw Ixelles</string>
    <string name="register_domaine_format">Mecanique</string>
    <string name="btn_register_cancel">Cancel</string>
    <string name="register_password_format">Password</string>
    <string name="garage_update_price_resa">Price</string>
    <string name="btn_log_out">Log Out</string>
</resources>
