<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.findgarage10.RegisterUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/register_name_garage"
            android:hint="@string/register_name_example"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_domaine_garage"
            android:hint="@string/register_domaine_format"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_email_garage"
            android:hint="@string/register_email_format"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_tel_garage"
            android:hint="@string/register_tel_format"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_adresse_garage"
            android:hint="@string/register_adresse_format"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">
            <Button
                android:id="@+id/btn_register_garage_save"
                android:text="@string/btn_register_save"
                android:layout_width="wrap_content"
                android:layout_columnWeight="0.5"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_register_garage_cancel"
                android:text="@string/btn_register_cancel"
                android:layout_columnWeight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_column="1"/>

        </GridLayout>
    </LinearLayout>

</LinearLayout>